--- a/_config.yml
+++ b/_config.yml
@@ -11,12 +11,12 @@ phone: 01086389316
 
 # Social links
 # twitter_username: jekyllrb
-github_username:  jekyll
+github_username:  https://github.com/dudqls1994
 # dribbble_username: jekyll
-facebook_username: jekyll
+facebook_username: https://www.facebook.com/profile.php?id=100003759608148
 # flickr_username: jekyll
-instagram_username: jekyll
-linkedin_username: jekyll
+instagram_username: https://www.instagram.com/duddbs2009/
+linkedin_username: https://www.linkedin.com/in/영빈-김-942886137/
 # xing_username: jekyll
 # pinterest_username: jekyll
 # youtube_username: jekyll
