--- a/_config.yml
+++ b/_config.yml
@@ -26,13 +26,12 @@ linkedin_username: https://www.linkedin.com/in/영빈-김-942886137/
 # about_title: About Me (Use this to override about section title)
 about_profile_image: assets/yb2.jpg
 about_content: | # this will include new lines to allow paragraphs
-  Write an awesome description about yourself here, this supports markdown, so you can add [links](http://foobar.com) and highlight things <mark>like this</mark>.
-
-  You can even add paragraphs by using empty lines like this and add anything else markdown supports such as
-    - Lists
-    - Tables
-    - Links
-    - Images
+  I am a student of graduate school of Ajou University and a member of [CVPR Lab](https://sites.google.com/site/haepaly/Home).   Please contact me for the detailed information. 
+  My recent research interests are in computer vision and deep learning. In particular, I am interested in Quantize Neural Network and model compression.
+    - Computer Vision & Deep Learning
+    - Quantize Neural Network 
+    - Binary Neural Network
+    - Model Compression
 
 # Projects Section
 # projects_title: Projects #(Use this to override about projects section title)
@@ -46,6 +45,7 @@ about_content: | # this will include new lines to allow paragraphs
 # More Section
 # more_title: A Little More About Me #(Use this to override about more section title)
 more_content: | # this will include new lines to allow paragraphs
+  I am a student of graduate school of Ajou University and a member of CVPR Lab.   Please contact me for the detailed information. 
   This is where you can write a little more about yourself. You could title this section **Interests** and include some of your other interests.
 
   Or you could title it **Skills** and write a bit more about things that make you more desirable, like *leadership* or *teamwork*
