--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,9 +1,11 @@
 # Project template
-- layout: top-middle
-  name: Ajou University
-  link: Link to project (eg. sproogen.github.io/modern-resume-theme)(optional)
-  github: Github page for project (eg. sproogen/modern-resume-theme)(optional)
-  quote: >
-    Short overview of the project (optional)
+- layout: left
+  name: Ajou University - Suwon, Korea
+  # link: Link to project (eg. sproogen.github.io/modern-resume-theme)(optional)
+  # github: Github page for project (eg. sproogen/modern-resume-theme)(optional)
+  # quote: >
+    # Short overview of the project (optional)
   description: | # this will include new lines to allow paragraphs
-    Description about the work on/with the project
+    **M.S.** Computer science 2018.09 ~ 2020.08
+    
+    **B.S.** Digital Media 2014.03 ~ 2018.08
