--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -6,8 +6,8 @@
   # quote: >
     # Short overview of the project (optional)
   description: | # this will include new lines to allow paragraphs
-    **M.S.** Computer science   > 2018.09 ~ 2020.08
+    **M.S.** Computer science    2018.09 ~ 2020.08
     
     
     
-    **B.S.**  Digital Media   > 2014.03 ~ 2018.08
+    **B.S.**  Digital Media    2014.03 ~ 2018.08
