--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,9 +1,9 @@
 # Education Template
 - layout: left
-  name: Institution name
-  dates: Date Range (eg. 2016 - 2019)
-  qualification: Qualifications (eg. BA Performing Arts)
-  quote: >
-    Short institution or course description (optional)
+  name: Skills
+  qualification: Language 
+  
   description: | # this will include new lines to allow paragraphs
-    Description of qualification
+    - C/C++ (OpenCV)
+    - Python (Pytorch)
+    - JAVA (Spring)
