--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,6 +1,6 @@
 # Education Template
 - layout: left
-  name: Skills
+  name: Programming Skills
   qualification: Language 
   
   description: | # this will include new lines to allow paragraphs
