--- a/_config.yml
+++ b/_config.yml
@@ -15,8 +15,8 @@ github_username:  dudqls1994
 # dribbble_username: jekyll
 facebook_username: profile.php?id=100003759608148
 # flickr_username: jekyll
-instagram_username: duddbs2009/
-linkedin_username: in/영빈-김-942886137/
+# instagram_username: duddbs2009/
+linkedin_username: 영빈-김-942886137/
 # xing_username: jekyll
 # pinterest_username: jekyll
 # youtube_username: jekyll
