--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ repository: Git repository where your resume will be hosted, only required if yo
 name: YoungBin, KIM
 title: AI Research
 email: dudqls1994@ajou.ac.kr
-phone: 01086389316
+phone: +82)01086389316
 
 
 # Social links
@@ -16,7 +16,7 @@ github_username:  dudqls1994
 facebook_username: profile.php?id=100003759608148
 # flickr_username: jekyll
 # instagram_username: duddbs2009/
-linkedin_username: 영빈-김-942886137/
+linkedin_username: dudqls1994@ajou.ac.kr
 # xing_username: jekyll
 # pinterest_username: jekyll
 # youtube_username: jekyll
