--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ github_username:  dudqls1994
 facebook_username: profile.php?id=100003759608148
 # flickr_username: jekyll
 # instagram_username: duddbs2009/
-linkedin_username: dudqls1994@ajou.ac.kr
+linkedin_username: dudqls1994
 # xing_username: jekyll
 # pinterest_username: jekyll
 # youtube_username: jekyll
