--- a/_data/project.yml
+++ b/_data/project.yml
@@ -6,10 +6,9 @@
   # quote: >
     # Short overview of the project (optional)
   description: | # this will include new lines to allow paragraphs
-    **논문제목**
-    저자
-    컨퍼런스 정보
+    **딥러닝 검출기 성능향상을 위한 GAN기반 Domain Adaptation**
     
+    김영빈, 나재민, 조상흠, 황원준
     
+    제 31회 영상처리 및 이해에 관한 워크샵 (IPIU), Feb. 2019 **(* 우수논문상 동상)**
     
-    **B.S.**  Digital Media    2014.03 ~ 2018.08
