--- a/_data/project.yml
+++ b/_data/project.yml
@@ -1,7 +1,7 @@
 # Project template
 - layout: left
   name: Conference 
-  link: 
+  link: International & Korea
   # github: Github page for project (eg. sproogen/modern-resume-theme)(optional)
   # quote: >
     # Short overview of the project (optional)
