--- a/_data/project.yml
+++ b/_data/project.yml
@@ -10,5 +10,5 @@
     
     - 김영빈, 나재민, 조상흠, 황원준
     
-    제 31회 영상처리 및 이해에 관한 워크샵 (IPIU), Feb. 2019 **(* 우수논문상 동상)**
+    - 제 31회 영상처리 및 이해에 관한 워크샵 (IPIU), Feb. 2019 **(* 우수논문상 동상)**
     
