--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ repository: Git repository where your resume will be hosted, only required if yo
 name: YoungBin, KIM
 title: AI Research
 email: dudqls1994@ajou.ac.kr
-phone: +82)01086389316
+phone: +82)010-8638-9316
 
 
 # Social links
