--- a/_config.yml
+++ b/_config.yml
@@ -47,10 +47,9 @@ about_content: | # this will include new lines to allow paragraphs
 # More Section
 # more_title: A Little More About Me #(Use this to override about more section title)
 more_content: | # this will include new lines to allow paragraphs
-  I am a student of graduate school of Ajou University and a member of CVPR Lab.   Please contact me for the detailed information. 
-  This is where you can write a little more about yourself. You could title this section **Interests** and include some of your other interests.
-
-  Or you could title it **Skills** and write a bit more about things that make you more desirable, like *leadership* or *teamwork*
+  I am a student of graduate school of Ajou University and a member of CVPR Lab. 
+  
+  Please contact me for the detailed information. 
 
 # Footer
 footer_show_references: true
