--- a/_data/project.yml
+++ b/_data/project.yml
@@ -12,3 +12,10 @@
     
     제 31회 영상처리 및 이해에 관한 워크샵 (IPIU), Feb. 2019 **(* 우수논문상 동상)**
     
+    
+    **Real Full Binary Neural Network for Image Classification and Object Detection**
+    
+    **YoungBin Kim**, Wonjun Hwang
+    
+    The 5th Asian Conference on Pattern Recognition (ACPR), Nov. 2019
+    
