--- a/_data/project.yml
+++ b/_data/project.yml
@@ -6,16 +6,15 @@
   # quote: >
     # Short overview of the project (optional)
   description: | # this will include new lines to allow paragraphs
-    **딥러닝 검출기 성능향상을 위한 GAN기반 Domain Adaptation**
+    **[딥러닝 검출기 성능향상을 위한 GAN기반 Domain Adaptation]** 제 31회 영상처리 및 이해에 관한 워크샵 (IPIU), Feb. 2019 **(* 우수논문상 동상)**
     
     **김영빈**, 나재민, 조상흠, 황원준
     
-    제 31회 영상처리 및 이해에 관한 워크샵 (IPIU), Feb. 2019 **(* 우수논문상 동상)**
     
-    
-    **Real Full Binary Neural Network for Image Classification and Object Detection**
+     
+    **Real Full Binary Neural Network for Image Classification and Object Detection**  The 5th Asian Conference on Pattern Recognition (ACPR), Nov. 2019
     
     **YoungBin Kim**, Wonjun Hwang
     
-    The 5th Asian Conference on Pattern Recognition (ACPR), Nov. 2019
+ 
     
