--- a/_config.yml
+++ b/_config.yml
@@ -34,6 +34,10 @@ about_content: | # this will include new lines to allow paragraphs
     - Quantize Neural Network 
     - Binary Neural Network
     - Model Compression
+    
+  And I am NNQ & CND Study member in AI-Robotics KR. You can see my presentation in YouTube.
+  BNN+: Improved Binary Network Training(https://www.youtube.com/watch?v=M7-lBoiFHRI&list=PLOhkE9VmM0SUh7J9NM8hnBol6R3CmqJFd&index=4) 
+  Bi-Real Nets(https://www.youtube.com/watch?v=pQmvmcPZHmM)
 
 # Projects Section
 # projects_title: Projects #(Use this to override about projects section title)
