--- a/_config.yml
+++ b/_config.yml
@@ -36,8 +36,9 @@ about_content: | # this will include new lines to allow paragraphs
     - Model Compression
     
   And I am NNQ & CND Study member in AI-Robotics KR. You can see my presentation in YouTube.
-  [BNN+: Improved Binary Network Training](https://www.youtube.com/watch?v=M7-lBoiFHRI&list=PLOhkE9VmM0SUh7J9NM8hnBol6R3CmqJFd&index=4) 
-  [Bi-Real Nets(ECCV2018)](https://www.youtube.com/watch?v=pQmvmcPZHmM)
+  
+ [BNN+: Improved Binary Network Training](https://www.youtube.com/watch?v=M7-lBoiFHRI&list=PLOhkE9VmM0SUh7J9NM8hnBol6R3CmqJFd&index=4) 
+ & [Bi-Real Nets(ECCV2018)](https://www.youtube.com/watch?v=pQmvmcPZHmM)
   
 
 # Projects Section
