--- a/_data/project.yml
+++ b/_data/project.yml
@@ -13,4 +13,4 @@
      
     **"Real Full Binary Neural Network for Image Classification and Object Detection"**,  **YoungBin Kim**, Wonjun Hwang
     
-    The 5th Asian Conference on Pattern Recognition (ACPR), Nov. 2019 **KEA 상**
+    The 5th Asian Conference on Pattern Recognition (ACPR), Nov. 2019 **미래형자동차(KEA)장려상**
